navbar open and collapse fixed

--- a/src/index.css
+++ b/src/index.css
@@ -125,20 +125,20 @@ ul.navlinks.active {
   gap: 1rem;
   position: fixed;
   top: 0;
-  bottom: 0;
   right: 0;
+  bottom: 0;
   z-index: 5;
   padding: 1rem;
   width: 80%;
-  height: 100vh;
+  height: 100%;
   box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px,
     rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
   background-image: url("./images/home-bg.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center right;
-  transform: translateX(-100%);
-  transition: transform 0.3s ease-out;
+  transform: translateX(100%);
+  transition: all 0.2s ease;
 }
 
 .sliding-menu.open {
@@ -146,10 +146,11 @@ ul.navlinks.active {
 }
 
 .sliding-menu svg {
-  width: 60px;
-  height: 60px;
+  width: auto;
+  height: 40px;
+  align-self: start;
   color: var(--secondary-color);
-  margin: 0.2rem 1rem;
+  margin: 0.2rem 1rem 1rem 2rem;
   cursor: pointer;
 }
 
@@ -168,14 +169,14 @@ ul.navlinks.active {
 
 .sliding-menu-navlinks li:hover {
   transition: all 0.3s ease;
-  transform: translateX(10px);
+  transform: translateX(20px);
   cursor: pointer;
 }
 
 .sliding-menu-navlinks li {
   width: 100%;
-  margin: 0.3rem;
-  padding: 0.5rem;
+  margin: 0.5rem;
+  padding: 1rem;
   box-shadow: var(--box-shadow);
   border-left: 5px solid var(--primary);
   background-color: white;
@@ -624,7 +625,7 @@ img.p-img {
 article.testimony {
   text-align: center;
   padding: 1rem;
-  border: 0.7rem solid #fff;
+  border: 0.3rem solid #fff;
   border-radius: 5px;
   flex: 1 1 30%;
   background-color: #333;
@@ -679,9 +680,11 @@ h2.heading {
   width: 98%;
   margin: 0 auto;
   height: auto;
+  padding-top: 3rem;
 }
 
 .contact h2 {
+  margin-top: 1rem;
   text-align: center;
   font-size: 1.8rem;
 }
